<resources>
    <string name="app_name">FitnessFlow</string>
    <string name="title_home">Fitness Categories</string>
    <string name="title_exercises">Exercises</string>
    <string name="title_exercise_detail">Exercise Details</string>
    <string name="title_image_fullscreen">Image preview</string>
    <string name="title_login">Login</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="title_weekly_plan">Weekly Plan</string>
    <string name="title_history">History</string>
    <string name="title_favorites">My Favorites</string>
    <string name="category_label">Category</string>
    <string name="exercise_label">Exercise</string>
    <string name="exercise_description_label">Description</string>
    <string name="exercise_image_description">Exercise image</string>
    <string name="favorite">Favorite</string>
    <string name="close_fullscreen">Close</string>
    <string name="close_fullscreen_symbol">✕</string>
    <string name="exercise_not_found_title">Exercise unavailable</string>
    <string name="exercise_not_found_desc">No details were found for this exercise.</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="go_to_sign_up">Create an account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="display_name">Display Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="guest_user">Guest</string>
    <string name="logged_in_as">Logged in as %1$s</string>
    <string name="not_logged_in">Not logged in: %1$s</string>
    <string name="open_weekly_plan">Open Weekly Plan</string>
    <string name="login_to_weekly_plan">Login to open weekly plan</string>
    <string name="open_favorites">Open Favorites</string>
    <string name="login_required_for_favorites">Please login to manage favorites</string>
    <string name="login_to_view_favorites">Login to view your favorites</string>
    <string name="no_favorites_yet">No favorite exercises yet</string>
    <string name="logout">Logout</string>
    <string name="weekly_plan_for_user">Weekly plan for %1$s</string>
    <string name="week_range_format">%1$s to %2$s</string>
    <string name="task_hint">Exercise or task title</string>
    <string name="add_task_title">Add task</string>
    <string name="add_task">Add Task</string>
    <string name="close_week">Close Week</string>
    <string name="history">History</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="status_yes">YES</string>
    <string name="status_no">NO</string>
    <string name="status_pending">PENDING</string>
    <string name="history_week_label">Week of %1$s</string>
    <string name="history_week_range">%1$s to %2$s</string>
    <string name="no_tasks_yet">No tasks yet</string>
</resources>